# Flowtic

./: README.md  pyproject.toml
src/flowtic/: __init__.py
src/flowtic/agents/: __init__.py  base.py  core.py  tools.py
src/flowtic/communication/: __init__.py  callbacks.py
src/flowtic/communication/channel/: __init__.py  core.py
src/flowtic/session/: __init__.py  base.py  core.py
tests/: test_async_agents.py  test_image_workflow.py  test_multi_agent.py  test_single_agent.py
