[project]
name = "flowtic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PrAsAnNaRePo", email = "prasannatwenty@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.74.7",
    "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
